--- a/crossover/templates/crossover/index.html
+++ b/crossover/templates/crossover/index.html
@@ -26,6 +26,15 @@
   </head>
 
   <body>
+
+    <!--Tweet-->
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://crossover.balmondstudio.com" data-text="..." data-via="balmondstudio" data-size="large" data-count="none" data-hashtags="crossoverbook">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+    <!--Follow-->
+    <a href="https://twitter.com/balmondstudio" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @balmondstudio</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
     <header>
 
       <h1>
