--- a/crossover/templates/crossover/index.html
+++ b/crossover/templates/crossover/index.html
@@ -79,8 +79,12 @@
     <!--Registration-->
     <div id='form' class='dialog'>
       <form>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        <br>
+        <h1>
+          Welcome to
+          <br>
+          Crossover - Balmond Studio
+        </h1>
+        <p>Please enter your Twitter username to proceed.</p>
         <input type="text" name="username" placeholder="Username">
         <br>
         <button type="button">Enter</button>
@@ -90,12 +94,32 @@
     <!--About-->
     <div id='about' class='dialog'>
       <div>
+
         <h1>ABOUT</h1>
-        <h2>Discription</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </br>
-        <h2>Instructions</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+        <h2>Website</h2>
+        <p>
+          Pattern, Connection, Material, Limits, Nature and Element. These are just a few of the key themes explored by designer Cecil Balmond in his new book Crossover. But what do these words mean to you?
+           <br>
+           Tapping into the Twittersphere, crossover.balmondstudio.com is an interactive social experiment that collects live tweets from around the world highlighting the never-ending interpretation of these six words in a global context. The constant and universal occurrence of these concepts rhythmically activates the algorithmic pattern. The pattern that also appears on the cover of Crossover, described by Cecil as &ldquo;an unknown zone&rdquo;.
+           <br>
+            By tweeting your own personal definition of one of the words, your live information is &lsquo;captured&rsquo; and represented by a still graphic that will be entered into a database. Combining all the graphics produced, the database will then build in size and density and the patterns will be seen in totality.
+        </p>
+
+        <h2>Competition</h2>
+        <p>
+          All tweets composed from this website that include one of the following: &lsquo;Pattern&rsquo; or &lsquo;Connection&rsquo; or &lsquo;Material&rsquo; or &lsquo;Limits&rsquo; or &lsquo;Nature&rsquo; or &lsquo;Element&rsquo; in addition to &lsquo;@crossoverbook&rsquo;, &lsquo;#balmondstudio&rsquo; and &lsquo;http://crossover.balmondstudio.com&rsquo; will automatically be entered into a draw to win a signed copy of Crossover. All four components must be contained within a single tweet to be eligible for the draw. The chosen word must be used in a sentence. One entry per username. Competition ends on 31st January 2014 at midnight GMT.
+        </p>
+
+        <h2>Crossover</h2>
+        <p>
+          In this long-awaited follow-up to the enormously popular informal, designer, writer, and engineer Cecil Balmond invites readers into his creative process as he documents his most innovative projects in art, architecture, and bridge design. 
+          <br>
+          &ldquo;The idea of Crossover is that it&rsquo;s not just one directional from here to there which is the literal meaning of the word crossover. For me it&rsquo;s a complete zone of interchange ... There&rsquo;s a whole negotiation about symmetry, material, pattern, connection &ndash; all these ideas. It&rsquo;s all in a big crossover zone so it&rsquo;s like a movement. From here to over here, from the virtual to the real, it&rsquo;s a whole serious of lines and that&rsquo;s why on the cover it&rsquo;s a multi zone of activity.&rdquo; &ndash; Cecil Balmond
+        </p>
+
+        <h2><a href="http://www.amazon.co.uk/Crossover-Cecil-Balmond/dp/3791345222" target="_blank">BUY</a></h2>
+
       </div>
     </div>
 
