--- a/crossover/templates/crossover/index.html
+++ b/crossover/templates/crossover/index.html
@@ -85,7 +85,7 @@
           Crossover - Balmond Studio
         </h1>
         <p>Please enter your Twitter username to proceed.</p>
-        <input type="text" name="username" placeholder="Username">
+        <input type="text" name="username" placeholder="@username">
         <br>
         <button type="button">Enter</button>
       </form>
