--- a/crossover/templates/crossover/index.html
+++ b/crossover/templates/crossover/index.html
@@ -108,7 +108,7 @@
 
         <h2>Competition</h2>
         <p>
-          All tweets composed from this website that include one of the following: &lsquo;Pattern&rsquo; or &lsquo;Connection&rsquo; or &lsquo;Material&rsquo; or &lsquo;Limits&rsquo; or &lsquo;Nature&rsquo; or &lsquo;Element&rsquo; in addition to &lsquo;@crossoverbook&rsquo;, &lsquo;#balmondstudio&rsquo; and &lsquo;http://crossover.balmondstudio.com&rsquo; will automatically be entered into a draw to win a signed copy of Crossover. All four components must be contained within a single tweet to be eligible for the draw. The chosen word must be used in a sentence. One entry per username. Competition ends on 31st January 2014 at midnight GMT.
+          All tweets composed from this website that include one of the following: &lsquo;Pattern&rsquo; or &lsquo;Connection&rsquo; or &lsquo;Material&rsquo; or &lsquo;Limits&rsquo; or &lsquo;Nature&rsquo; or &lsquo;Element&rsquo; in addition to &lsquo;@crossoverbook&rsquo;, &lsquo;#balmondstudio&rsquo; and &lsquo;http://crossover.balmondstudio.com&rsquo; will automatically be entered into a draw to win one of five signed copies of Crossover. All four components must be contained within a single tweet to be eligible for the draw. The chosen word must be used in a sentence. One entry per username. Competition ends on 31st January 2014 at midnight GMT.
         </p>
 
         <h2>Crossover</h2>
